# protohackers

./: .gitignore  .pre-commit-config.yaml  README.md  logging.conf
.github/workflows/: publish.yaml
0000_smoke_test/python/: echo_asyncio.py
0001_prime_time/python/: is_prime.py
0002_means_to_an_end/python/: price.py
0003_budget_chat/python/: chat.py
c/: Makefile  a.out
c/0000_smoke_test/: Makefile  smoke_test  smoke_test.c
c/lib/: net.c  net.h
python/: .dockerignore  .prospector.yaml  Containerfile  entrypoint.sh  logging.conf  pyproject.toml
python/0000_smoke_test/: echo_socketserver.py
python/0001_prime_time/: is_prime.py
python/0002_means_to_an_end/: price.py
python/0003_budget_chat/: chat.py
python/0004_unusual_database_program/: kv.py
python/0005_mob_in_the_middle/: mob.py
python/config/: __init__.py  module.py  poetry.py
python/protohackers/: __init__.py
python/protohackers/m0000_smoke_test/: __init__.py  echo_asyncio.py  echo_socketserver.py
python/protohackers/m0001_prime_time/: __init__.py  is_prime.py
python/protohackers/m0002_means_to_an_end/: __init__.py  price.py
python/protohackers/m0003_budget_chat/: __init__.py  chat.py
python/protohackers/m0004_unusual_database_program/: __init__.py  kv.py
python/protohackers/m0005_mob_in_the_middle/: __init__.py  mob.py
python/protohackers/m0007_line_reversal/: __init__.py  line_reversal.py
python/protohackers/m0008_insecure_sockets_layer/: __init__.py  obfuscate.py  server.py
python/tests/test_insecure_sockets_layer/: test_obfuscate.py
